<resources>
    <string name="app_name">Ember3</string>
    <string name="search_button">Search</string>
    <string name="reset_button">Reset</string>
    <string name="placeholder1">Coming soon!</string>
    <string name="title_activity_results_page">ResultsPage</string>
    <string name="to_filters">Add filters</string>
    <string name="choose_filter">Choose a filter.</string>
    <string name="submit_filter">Add filter</string>
    <string name="accept_filters">Accept filters</string>
    <string name="enter_name">Enter a name to search by.</string>
    <string name="delete_filter">Delete</string>
    <string name="genre_filter">Enter a genre filter.</string>
    <string name="actor_filter">Enter an actor filter.</string>
    <string name="edit_text_on_genre_click">Enter genre.</string>
    <string name="edit_text_on_actor_click">Enter actor.</string>
    <string name="edit_text_on_director_click">Enter director.</string>
    <string name="director_filter">Enter a director filter.</string>
    <string name="search_again_button">Search for another movie</string>
    <string name="latest_filter">Latest Filter</string>
    <string name="enter_filter">Enter filter.</string>
    <string name="action_settings">Settings</string>
    <string name="title_with_year">%1$s (%2$s)</string>
    <string name="starring">Starring: %1$s</string>
    <string name="platforms">Platforms: %1$s</string>
    <string name="directed_by">Directed by %1$s</string>
    <string name="page_number">Page %1$d</string>
    <string name="next">Next</string>
    <string name="previous">Prev</string>
    <string name="back">Back</string>
    <string name="page_placeholder">Page x</string>
    <string name="search_hint">Hint: You can search for a movie by just its title, or you can add
        filters after you press search. If you just want to search by actor, genre, or director,
        you can press "SEARCH" without typing anything in the search box and add whatever filters
        you like.</string>
    <string name="actor_list">Actors: %1$s</string>
    <string name="genre_list">Genres: %1$s</string>
    <string name="writer_list">Writers: %1$s</string>
    <string name="director_list">Directors: %1$s</string>
    <string name="runtime">%1$s minutes</string>
    <string name="metascore">Metacritic score: %1$s</string>
    <string name="imdb_rating">IMDb rating: %1$s</string>
    <string name="plot">Plot: </string>
    <string name="search_by_title">Search by title</string>
    <string name="search_by_actor">Search by actor</string>
    <string name="view_suggestions">View suggested movies</string>
    <string name="no_year">No year found</string>
    <string name="no_genres">No genres found</string>
    <string name="no_actors">No actors found</string>
    <string name="no_writers">No writers found</string>
    <string name="no_director">No directors found</string>
    <string name="no_imdb">No IMDb rating found</string>
    <string name="no_plot">No plot found</string>
    <string name="no_platform">No platform found</string>
</resources>
