<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchResultsActivity">

    <Button
        android:id="@+id/searchAgainButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:onClick="searchAgainOnClick"
        android:text="@string/search_again_button"
        app:layout_constraintBottom_toTopOf="@+id/resultButtonA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/resultButtonA"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="2dp"
        android:onClick="resultButtonAOnClick"
        app:layout_constraintBottom_toTopOf="@+id/resultButtonB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchAgainButton"
        app:layout_constraintVertical_weight="6" />

    <TextView
        android:id="@+id/resultTitleA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:elevation="2dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:textIsSelectable="true"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/resultButtonA"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="@+id/resultButtonA"
        app:layout_constraintTop_toTopOf="@+id/resultButtonA" />

    <TextView
        android:id="@+id/resultTitleB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:elevation="2dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:textIsSelectable="true"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/resultButtonB"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="@+id/resultButtonB"
        app:layout_constraintTop_toTopOf="@+id/resultButtonB" />

    <TextView
        android:id="@+id/resultDirectorA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:elevation="2dp"
        android:paddingLeft="24dp"
        android:paddingTop="4dp"
        android:paddingRight="24dp"
        android:paddingBottom="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultTitleA" />

    <TextView
        android:id="@+id/resultDirectorB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:elevation="2dp"
        android:maxLines="1"
        android:paddingLeft="24dp"
        android:paddingTop="4dp"
        android:paddingRight="24dp"
        android:paddingBottom="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultTitleB" />

    <TextView
        android:id="@+id/resultActorsA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:elevation="2dp"
        android:maxLines="2"
        android:minLines="1"
        android:paddingLeft="24dp"
        android:paddingTop="4dp"
        android:paddingRight="24dp"
        android:paddingBottom="4dp"
        app:layout_constraintBottom_toTopOf="@+id/resultPlotA"
        app:layout_constraintEnd_toEndOf="@+id/resultButtonA"
        app:layout_constraintStart_toStartOf="@+id/resultButtonA"
        app:layout_constraintTop_toBottomOf="@+id/resultDirectorA" />

    <TextView
        android:id="@+id/resultActorsB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:elevation="2dp"
        android:maxLines="2"
        android:paddingLeft="24dp"
        android:paddingTop="4dp"
        android:paddingRight="24dp"
        android:paddingBottom="4dp"
        app:layout_constraintBottom_toTopOf="@+id/resultPlotB"
        app:layout_constraintEnd_toEndOf="@+id/resultButtonB"
        app:layout_constraintStart_toStartOf="@+id/resultButtonB"
        app:layout_constraintTop_toBottomOf="@+id/resultDirectorB" />

    <TextView
        android:id="@+id/resultPlotA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:elevation="2dp"
        android:maxLines="3"
        android:paddingLeft="24dp"
        android:paddingTop="4dp"
        android:paddingRight="24dp"
        android:paddingBottom="4dp"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/resultButtonA"
        app:layout_constraintEnd_toEndOf="@+id/resultButtonA"
        app:layout_constraintStart_toStartOf="@+id/resultButtonA" />

    <TextView
        android:id="@+id/resultPlotB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:elevation="2dp"
        android:maxLines="3"
        android:paddingLeft="24dp"
        android:paddingTop="4dp"
        android:paddingRight="24dp"
        android:paddingBottom="4dp"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/resultButtonB"
        app:layout_constraintEnd_toEndOf="@+id/resultButtonA"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/resultButtonA" />

    <Button
        android:id="@+id/resultButtonB"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:onClick="resultButtonBOnClick"
        app:layout_constraintBottom_toTopOf="@+id/previousButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultButtonA"
        app:layout_constraintVertical_weight="6" />

    <Button
        android:id="@+id/previousButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultButtonB" />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"
        android:text="@string/previous"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultButtonB" />

    <TextView
        android:id="@+id/pageNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/placeholder1"
        app:layout_constraintBaseline_toBaselineOf="@+id/previousButton"
        app:layout_constraintEnd_toStartOf="@+id/previousButton"
        app:layout_constraintStart_toEndOf="@+id/nextButton" />

</android.support.constraint.ConstraintLayout>